fix: text fixes and initial commit

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -112,7 +112,7 @@
   <div class="hero bg-base-100 min-h-screen">
     <div class="hero-content flex-col lg:flex-row">
       <div>
-        <h1 class="text-5xl font-bold">Your Universal Micro-Clipboard.</h1>
+        <h1 class="text-5xl font-bold">Your Universal Clipboard.</h1>
         <p class="py-6">
           MyShare is an open source clipboard service that you can use across
           devices.
