--- a/src/public/index.html
+++ b/src/public/index.html
@@ -59,7 +59,6 @@
   <div
     id="bg"
     class="hero bg-base-200 min-h-screen"
-    style="background-image: url(https://myshare.haydar.dev/img/background.png)"
     >
     <div class="hero-overlay bg-opacity-80"></div>
     <div class="hero-content text-neutral-content text-center">
@@ -77,7 +76,7 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;"
         >
-          Your Universal Clipboard
+          The Universal Clipboard
         </h1>
         <p
           class="py-6"
@@ -159,11 +158,14 @@
   });
   
   window.onload = function () {
-    const dialogues = [
-      "The Universal Clipboard",
+    const images = [
+      "https://myshare.haydar.dev/img/background.png",
+      "https://myshare.haydar.dev/img/background2.png",
+      "https://myshare.haydar.dev/img/background3.png"
     ];
-    var choose = Math.floor(Math.random() * dialogues.length);
-    document.getElementById("title").textContent = dialogues[choose];
+    var choose = Math.floor(Math.random() * images.length);
+    document.getElementById("bg").style.backgroundImage = `url("${images[choose]}")`;
+    console.log(images[choose].toString());
   };
 
   // code for if the person is auth'd they can instantly go to the dashboard
