feat: added 404 fallback pages, login page bug fixes

--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -55,7 +55,7 @@
 <div class="modal" role="dialog">
   <div class="modal-box space-y-3">
     <h2 class="text-lg font-bold">Create a Share</h2>
-    <p>For now, MyShare only supports text, but that is because this is a rough draft and will change soon.</p>
+    <p>For now, MyShare only supports text. In a later update we will bring image support too.</p>
     <input type="text" id="shareInput_title" placeholder="Title" class="input input-bordered w-full max-w-xs" /><br>
     <textarea class="textarea textarea-bordered w-full max-w-xs" id="shareInput_content" placeholder="Content"></textarea>
     <div class="modal-action">
