--- a/src/public/index.html
+++ b/src/public/index.html
@@ -73,6 +73,7 @@
           style="
           font-size: 64px;
           background: -webkit-linear-gradient(#a09eff, #333bb1);
+          background-clip: text;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;"
         >
