--- a/src/public/login.html
+++ b/src/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyShare - Register</title>
+    <title>MyShare - Login</title>
     <link href="/css/app.css" rel="stylesheet">
     <script src="../registerScript.js"></script>
     <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
@@ -44,15 +44,18 @@
 <div class="hero bg-base-200 min-h-screen">
 <div class="card card-bordered bg-base-100 w-80">
     <div class="card-body card-bordered">
-      <!-- todo: add thing that tells you that you cant sign in on the top if theres an error-->
         <div class="container" style="display: grid;align-items: center; grid-template-columns: 1fr 1fr 1fr;column-gap: 2px;">
          <img src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;">
          <h2 class="text-2xl font-bold py-2">Login</h2>
       </div>
+  <!-- <center><div class="card card-bordered bg-error w-60 py-2 px-4">
+        <p class="font-semibold">An error occurred while trying to login.</p>
+      </div></center>
+  -->
       <input id="email" placeholder="Email" class="input input-bordered" />
       <input id="pw" type="password" placeholder="Password" class="input input-bordered" />
 
-      <button class="btn btn-primary" id="register" type="submit" onClick="postToServer()">Login</button>
+      <button class="btn btn-primary" id="login" type="submit" onClick="postToServer()">Login</button>
       <div class="divider"></div>
       <p2 class="text-center">Don't have an account? <a class="link" href="/register.html">Register!</a></p2>
     </div>
@@ -61,6 +64,15 @@
 </html>
 
 <script>
+var input = document.getElementById("pw");
+input.addEventListener("keypress", function(event) {
+  if (event.key === "Enter") {
+    event.preventDefault();
+    document.getElementById("login").click();
+  }
+});
+
+
 async function postToServer() {
     const email = document.getElementById('email').value;
     const password = document.getElementById('pw').value;
