fix: word adjustments

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -70,12 +70,7 @@
           data-aos-delay="0"
           data-aos-duration="1000"
           data-aos-once="true"
-          style="
-          font-size: 64px;
-          background: -webkit-linear-gradient(#a09eff, #333bb1);
-          background-clip: text;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;"
+          style="font-size: 64px;"
         >
           The Universal Clipboard
         </h1>
@@ -86,8 +81,8 @@
           data-aos-duration="1000"
           data-aos-once="true"
         >
-          Your clipboard-as-a-service allows you
-          to send files across devices and let them decay after a period of time.
+          MyShare allows you to send files, notes, and media across devices
+          and let them decay after a period of time.
         </p>
         <button class="btn btn-primary font-bold px-12" onclick="location.href='/login.html';">
           Get Started
