--- a/src/public/note.html
+++ b/src/public/note.html
@@ -26,10 +26,11 @@
             <h2 class="text-2xl font-bold py-2">Note Title (Draft)</h2>
             <br>
         </div>
-        <h2 class="text-xl py-2">Note Description</h2>
-        <button class="btn btn-primary" id="copyLink" type="submit" onClick="">Copy Link</button>
-        <button class="btn btn-primary" id="copyClipboard" type="submit" onClick="">Copy Content to Clipboard</button>
-        <div class="divider"></div>
+        <img src="https://picsum.photos/100/100">
+        <h2 class="text-xs py-2">Note Description</h2>
+        <div class="buttonHolder"> 
+          <button class="btn btn-primary" id="copyClipboard" type="submit" onClick="">Copy Content to Clipboard</button>
+        </div>
       </div>
     </div>
   </div>
