feat: footer and moving away from using <br>'s

--- a/src/public/credits.html
+++ b/src/public/credits.html
@@ -53,4 +53,28 @@
     </div>
   </div>
 </div>
+<footer class="footer footer-horizontal footer-center bg-base-200 text-base-content rounded p-10">
+  <nav class="grid grid-flow-col gap-4">
+    <a class="link link-hover" href="/about.html">About us</a> |
+    <a class="link link-hover" href="/contact.html">Contact</a> |
+    <a class="link link-hover" href="/tos.html">Terms of Service</a> |
+    <a class="link link-hover" href="/privacy.html">Privacy Policy</a> |
+  </nav>
+  <nav>
+    <div class="grid grid-flow-col gap-4">
+      <a>
+
+      </a>
+      <a>
+
+      </a>
+      <a>
+
+      </a>
+    </div>
+  </nav>
+  <aside>
+    <p>Copyright © 2024 - 2025 MyShare All right reserved</p>
+  </aside>
+</footer>
 </html>
