--- a/src/public/index.html
+++ b/src/public/index.html
@@ -84,12 +84,10 @@
           MyShare allows you to send files, notes, and media across devices
           and let them decay after a period of time.
         </p>
-        <button class="btn btn-primary font-bold px-12" onclick="location.href='/login.html';">
+        <button class="btn btn-primary font-bold px-12" onclick="location.href='/register.html';">
           Get Started
         </button>
-        <br />
-        <br />
-        <div class="stats stats-vertical lg:stats-horizontal shadow">
+        <div class="stats stats-vertical lg:stats-horizontal shadow" style="padding: 3px; margin: 24px;">
           <div class="stat">
             <div class="stat-title">Total Users</div>
             <div class="stat-value" id="totalUserValue">0</div>
@@ -118,29 +116,34 @@
           <li>Uploaded files have native Discord embed support</li>
         </p>
         <br>
-        <button class="btn btn-neutral px-10">Learn More</button> <br/>
+        <button class="btn btn-neutral px-10">Learn More</button>
       </div>
     </div>
   </div>
+  <footer class="footer footer-horizontal footer-center bg-base-200 text-base-content rounded p-10">
+    <nav class="grid grid-flow-col gap-4">
+      <a class="link link-hover" href="/about.html">About us</a> |
+      <a class="link link-hover" href="/contact.html">Contact</a> |
+      <a class="link link-hover" href="/tos.html">Terms of Service</a> |
+      <a class="link link-hover" href="/privacy.html">Privacy Policy</a> |
+    </nav>
+    <nav>
+      <div class="grid grid-flow-col gap-4">
+        <a>
 
-  <div class="hero bg-base-300 min-h-screen">
-    <div class="hero-content flex-col lg:flex-row">
-      <img class="skeleton max-w-sm rounded-lg shadow-2xl" />
-      <div>
-        <h1 class="text-5xl font-bold">Why use MyShare?</h1>
-        <p class="py-2 px-2">
-          Have you ever wanted to send files between yourself, but you weren't
-          able to? Have you ever wanted to send an image through Discord, but 
-          couldn't because you didn't have access at the time? MyShare is able 
-          to completely rid this issue by having desktop, web, and mobile support
-          to send and upload files and notes. Upload it on one device, copy it on
-          another, send it wherever.
-        </p>
-        <button class="btn btn-primary px-10">Learn More</button> <br />
-        <br/>
+        </a>
+        <a>
+
+        </a>
+        <a>
+
+        </a>
       </div>
-    </div>
-  </div>
+    </nav>
+    <aside>
+      <p>Copyright © 2024 - 2025 MyShare All right reserved</p>
+    </aside>
+  </footer>
 </html>
 <script src="js/aos.js"></script>
 <script>
