--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -56,7 +56,7 @@
   <div class="modal-box space-y-3">
     <h2 class="text-lg font-bold">Create a Share</h2>
     <p>For now, MyShare only supports text. In a later update we will bring image support too.</p>
-    <input type="text" id="shareInput_title" placeholder="Title" class="input input-bordered w-full max-w-xs" /><br>
+    <input type="text" id="shareInput_title" placeholder="Title" class="input input-bordered w-full max-w-xs" />
     <textarea class="textarea textarea-bordered w-full max-w-xs" id="shareInput_content" placeholder="Content"></textarea>
     <div class="modal-action">
      
