updated temporary logging and token saves to localStorage

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -91,7 +91,8 @@
           <div class="stat">
             <div class="stat-title">Total Users</div>
             <div class="stat-value" id="totalUserValue">0</div>
-            <div class="stat-desc">All-Time</div>
+            <div class="stat-desc">Accidentally wiped our users, please re-register!</div>
+
           </div>
           <div class="stat">
             <div class="stat-title"> Total Uploads</div>
@@ -129,12 +130,6 @@
     </nav>
     <nav>
       <div class="grid grid-flow-col gap-4">
-        <a>
-
-        </a>
-        <a>
-
-        </a>
         <a>
 
         </a>
