EXTREMELY BIG BREAKING CHANGE REFACTORED WHOLE PROJECT AND UPDATED DAISYUI5 WILL UNDERGO A TON OF CHANGES!!!

--- a/public/login.html
+++ b/public/login.html
@@ -132,12 +132,15 @@
       if (!response.ok) {
         throw new Error("Err");
       }
-
       const data = await response.json();
       const token = data.token;
 
       localStorage.setItem("token", token); // KEEP THIS SAFE!
       const value = localStorage.getItem("token");
+
+      const tokenJSON = {
+        token: token
+      };
     } catch (error) {
       console.error("err:", error);
       window.location.replace("https://myshare.haydar.dev/login.html");
