--- a/public/note.html
+++ b/public/note.html
@@ -26,8 +26,17 @@
             <h2 class="text-2xl font-bold py-2">Note Title (Draft)</h2>
             <br>
         </div>
-        <img src="https://picsum.photos/100/100">
-        <h2 class="text-xs py-2">Note Description</h2>
+      <!--  <img src="https://picsum.photos/80" width="auto" height="auto"> -->
+        <h2 class="text-s py-2 text-wrap"> 
+          🏆 Today’s typ.ing daily challenge:
+
+🌟 Speed: 104wpm
+🎯 Accuracy: 94.94%
+🥇 Position: 2 out of 33 players today
+🔥 Streak: 4
+📅 typ.ing/daily
+
+        </h2>
         <div class="buttonHolder"> 
           <button class="btn btn-primary" id="copyClipboard" type="submit" onClick="">Copy Content to Clipboard</button>
         </div>
