--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -90,6 +90,28 @@
 <script type="text/javascript" src="getShareDetails.js"></script>
 <script>
 
+async function isLoggedIn() {
+    try {
+      const response = await fetch('https://myshare.haydar.dev/api/email', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: localStorage.get(token)
+      });
+      if (!response.ok) {
+        throw new Error('err');
+        console.log(err);
+        alert(err);
+      }
+      const responseData = await response.json();
+      alert('succeeded' + responseData);
+    } catch (error) {
+      console.error('err:', error);
+    }
+}
+isLoggedIn();
+
 async function saveShare() {
   let user = "TestUser"
   let textcontent = document.getElementById("shareInput_content").value;
