--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyShare</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/tw.css" />
     <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
     <link href="/css/app.css" rel="stylesheet">
     <script
