--- a/public/register.html
+++ b/public/register.html
@@ -51,7 +51,7 @@
          <h2 class="text-2xl font-bold py-2">Register</h2>
       </div>
       
-      <input id="email" placeholder="Email" class="input input-bordered p-3" />
+      <input id="email" type="email" placeholder="Email" class="input validator input-bordered p-3" />
       <input id="username" placeholder="Username" class="input input-bordered p-3" /> 
       <input id="pw" type="password" placeholder="Password" class="input input-bordered p-3" />
       
