--- a/public/skeleton.html
+++ b/public/skeleton.html
@@ -21,6 +21,7 @@
     ></script>
     <link rel="stylesheet" href="/css/aos.css" />
   </head>
+
   <div class="navbar bg-base-100 shadow-sm">
     <div class="navbar-start">
       <div class="dropdown">
@@ -34,6 +35,7 @@
           <li><a onclick="location.href='/credits.html';">Credits</a></li>
         </ul>
       </div>
+      <img class="" src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;">
       <a class="btn btn-ghost text-xl">MyShare</a>
     </div>
     <div class="navbar-center hidden lg:flex">
@@ -67,6 +69,7 @@
       <a class="btn" href="/login.html">Login</a>
     </div>
   </div>
+
 
   <footer class="footer footer-horizontal footer-center bg-base-200 text-base-content rounded p-10">
     <nav class="grid grid-flow-col gap-4">
@@ -109,5 +112,6 @@
     console.log(images[choose].toString());
   };
 
+  
   // code for if the person is auth'd they can instantly go to the dashboard
 </script>
