--- a/public/note.html
+++ b/public/note.html
@@ -14,28 +14,16 @@
 </head>
 
 <div class="hero bg-base-200 min-h-screen">
-  <div class="card card-bordered bg-base-100 w-90">
+  <div class="card card-bordered bg-base-100 w-120">
       <div class="card-body card-bordered">
         <div class="badgeDiv"> 
-          <div class="badge badge-outline badge-error">badge</div>
-          <div class="badge badge-outline badge-error">badge</div>
-          <div class="badge badge-outline badge-error">badge</div>
-          <div class="badge badge-outline badge-error">badge</div>
+          <div class="badge badge-outline badge-warning">priority</div>
+          <div class="badge badge-outline badge-error">expiring in 1d</div>
         </div>
-          <div class="container" style="display: grid;align-items: center; grid-template-columns: 1fr 1fr 1fr;column-gap: 2px;">
             <h2 class="text-2xl font-bold py-2">Note Title (Draft)</h2>
-            <br>
-        </div>
-      <!--  <img src="https://picsum.photos/80" width="auto" height="auto"> -->
+       <img src="https://picsum.photos/80" width="auto" height="auto"> 
         <h2 class="text-s py-2 text-wrap"> 
-          🏆 Today’s typ.ing daily challenge:
-
-🌟 Speed: 104wpm
-🎯 Accuracy: 94.94%
-🥇 Position: 2 out of 33 players today
-🔥 Streak: 4
-📅 typ.ing/daily
-
+          This is my text for a note! See there's an image too!
         </h2>
         <div class="buttonHolder"> 
           <button class="btn btn-primary" id="copyClipboard" type="submit" onClick="">Copy Content to Clipboard</button>
