feat: updated login/register ui and password recovery WIP

--- a/public/register.html
+++ b/public/register.html
@@ -58,8 +58,8 @@
 </div>
 
 <div class="hero bg-base-200 min-h-screen">
-<div class="card card-bordered bg-base-100 w-80">
-    <div class="card-body card-bordered">
+<div class="card card-border bg-base-300 w-80 shadow-xl border-base-100">
+    <div class="card-body">
         <div class="container" style="display: grid;align-items: center; grid-template-columns: 1fr 1fr 1fr;column-gap: 2px;">
          <img src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;">
          <h2 class="text-2xl font-bold py-2">Register</h2>
