--- a/public/index.html
+++ b/public/index.html
@@ -75,43 +75,30 @@
     id="bg"
     class="hero bg-base-200 min-h-screen"
     >
-    <div class="hero-overlay bg-opacity-80"></div>
+    <div class="hero-overlay bg-opacity-70"></div>
     <div class="hero-content text-neutral-content text-center">
       <div class="max-w-md">
-        <h1
-          id="title"
-          class="text-5xl font-bold"
-          data-aos="fade-up"
-          data-aos-delay="0"
-          data-aos-duration="1000"
-          data-aos-once="true"
-          style="font-size: 64px;"
-        >
-          The Universal Clipboard
+        <h1 id="title" class="text-5xl font-bold" data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true"
+          style="font-size: 62px;">
+          <span style=" font-size: 66px; background: -webkit-linear-gradient(#a1c0ff, #5861c3); background-clip: text; -webkit-text-fill-color: transparent;">
+          Your
+          </span> Universal Clipboard
         </h1>
-        <p
-          class="py-6"
-          data-aos="fade-down"
-          data-aos-delay="0"
-          data-aos-duration="1000"
-          data-aos-once="true"
-        >
+        <p class="py-6" data-aos="fade-down" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true">
           MyShare allows you to send files, notes, and media across devices
           and let them decay after a period of time.
         </p>
         <button class="btn btn-primary font-bold px-12" onclick="location.href='/register.html';">
           Get Started
         </button>
-        <div class="stats stats-vertical lg:stats-horizontal shadow bg-base-200 border-base-300" style="padding: 3px; margin: 24px;">
+        <div class="stats stats-vertical lg:stats-horizontal shadow bg-base-100 border border-base-300" style="margin: 24px;">
           <div class="stat">
             <div class="stat-title">Total Users</div>
             <div class="stat-value" id="totalUserValue">0</div>
-            <div class="stat-desc">Accidentally wiped our users, please re-register!</div>
           </div>
           <div class="stat">
             <div class="stat-title"> Total Uploads</div>
             <div class="stat-value" id="totalNotesValue">0</div>
-            <div class="stat-desc">Past 24 Hours</div>
           </div>
         </div>
       </div>
