--- a/public/recovery.html
+++ b/public/recovery.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyShare - Login</title>
+    <title>MyShare - Recovery</title>
     <link href="/css/app.css" rel="stylesheet" />
     <script src="../registerScript.js"></script>
     <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico" />
@@ -73,20 +73,10 @@
             src="https://myshare.haydar.dev/img/myshare_white.png"
             style="height: 64px; width: 64px"
           />
-          <h2 class="text-2xl font-bold py-2">Login</h2>
+          <h2 class="text-2xl font-bold py-2">Recovery</h2>
         </div>
-        <!-- <center><div class="card card-bordered bg-error w-60 py-2 px-4">
-        <p class="font-semibold">An error occurred while trying to login.</p>
-      </div></center>
-  -->
-        <input id="email" placeholder="Email" class="input input-bordered" />
-        <input
-          id="pw"
-          type="password"
-          placeholder="Password"
-          class="input input-bordered"
-        />
 
+        <input id="email" placeholder="Email" class="input input-bordered" />
         <button
           class="btn btn-primary"
           style="padding: 20px;"
@@ -94,20 +84,15 @@
           type="submit"
           onClick="postToServer()"
         >
-          Login
+        Send Email
         </button>
-        <div class="divider"></div>
-        <p2 class="text-center"
-          >Don't have an account?
-          <a class="link" href="/register.html">Register!</a></p2>
-        <p2 class="text-center"><a class="link" href="/recovery.html">Forgot credentials?</a></p2>
       </div>
     </div>
   </div>
 </html>
 
 <script>
-  var input = document.getElementById("pw");
+  var input = document.getElementById("email");
   input.addEventListener("keypress", function (event) {
     if (event.key === "Enter") {
       event.preventDefault();
@@ -117,15 +102,13 @@
 
   async function postToServer() {
     const email = document.getElementById("email").value;
-    const password = document.getElementById("pw").value;
     const userData = {
-      email: email,
-      password: password,
+      email: email
     };
 
     try {
       const response = await fetch(
-        "https://myshare.haydar.dev/api/users/login",
+        "https://myshare.haydar.dev/api/users/accountrecovery",
         {
           method: "POST",
           headers: {
@@ -139,14 +122,8 @@
         throw new Error("Err");
       }
       const data = await response.json();
-      const token = data.token;
-
-      localStorage.setItem("token", token); // KEEP THIS SAFE!
-      const value = localStorage.getItem("token");
-      alert("Token saved in storage: " + value);
     } catch (error) {
       console.error("err:", error);
-      window.location.replace("https://myshare.haydar.dev/login.html");
       alert("error" + error);
     }
   }
