--- a/public/credits.html
+++ b/public/credits.html
@@ -57,8 +57,8 @@
 </div>
 
 <div class="hero bg-base-200 min-h-screen">
-<div class="card card-bordered bg-base-300 w-400">
-    <div class="card-body card-bordered">
+<div class="card card-border bg-base-300 border-base-100 w-200 shadow-xl">
+    <div class="card-body card-border">
     <h2 class="text-2xl font-bold py-1">Credits</h2>
     <p2 class="py-2" style="white-space: pre-line"><b>Haydar</b> - VPS / Server Hosting / Beta Tester</h2>
     <p2 class="py-2"><b>Byeoon</b> - Lead Developer / Founder / CEO</p2>
