spaced out register ui

--- a/public/login.html
+++ b/public/login.html
@@ -67,6 +67,7 @@
             align-items: center;
             grid-template-columns: 1fr 1fr 1fr;
             column-gap: 2px;
+            padding: 8px;
           "
         >
           <img
@@ -79,16 +80,16 @@
         <p class="font-semibold">An error occurred while trying to login.</p>
       </div></center>
   -->
-        <input id="email" placeholder="Email" class="input input-bordered" />
+        <input id="email" placeholder="Email" class="input input-bordered mt-2" />
         <input
           id="pw"
           type="password"
           placeholder="Password"
-          class="input input-bordered"
+          class="input input-bordered p-4 mt-2"
         />
 
         <button
-          class="btn btn-primary"
+          class="btn btn-primary mt-4"
           style="padding: 20px;"
           id="login"
           type="submit"
