feat: fixed auth. it works now

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,8 @@
         <button class="btn btn-primary font-bold px-12" onclick="location.href='/register.html';">
           Get Started
         </button>
-        <div class="stats stats-vertical lg:stats-horizontal shadow bg-base-100 border border-base-300" style="margin: 24px;">
+        <br>
+        <div class="stats lg:stats-horizontal shadow-xl bg-base-100 border border-primary" style="margin: 24px;">
           <div class="stat">
             <div class="stat-title">Total Users</div>
             <div class="stat-value" id="totalUserValue">0</div>
@@ -107,14 +108,14 @@
   <div class="hero bg-base-100 min-h-screen">
     <div class="hero-content flex-col lg:flex-row">
       <div>
-        <h1 class="text-5xl font-bold">Your Universal Clipboard.</h1>
-        <p class="py-6">
+        <h1 class="text-5xl font-bold">Copy anywhere.</h1>
+        <p class="py-4">
           MyShare is an open source clipboard service that you can use across
           devices.
         </p>
-        <p class="py-2">Some of our features include:
-          <li>Saving your files directly</li>
+        <p class="py-1">Some of our features that stand out are:
           <li>Automatically decay files after a certain time</li>
+          <li>Built-in labeling and tagging system</li>
           <li>Uploaded files have native Discord embed support</li>
         </p>
         <br>
