--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -92,11 +92,11 @@
 async function isLoggedIn() {
     try {
       const response = await fetch('https://myshare.haydar.dev/api/email', {
-        method: 'POST',
+        method: 'GET',
         headers: {
           'Content-Type': 'application/json',
-        },
-        body: localStorage.get(token)
+          'authorization': localStorage.getItem("token")
+        }
       });
       if (!response.ok) {
         throw new Error('err');
@@ -104,9 +104,9 @@ async function isLoggedIn() {
         alert(err);
       }
       const responseData = await response.json();
-      alert('succeeded' + responseData);
+      alert('succeeded, your email is ' + responseData.email);
     } catch (error) {
-      console.error('err:', error);
+      alert('err:', error);
     }
 }
 isLoggedIn();
