fix: mobile users would not see the sidebar

--- a/public/credits.html
+++ b/public/credits.html
@@ -60,9 +60,9 @@
 <div class="card card-border bg-base-300 border-base-100 w-200 shadow-xl">
     <div class="card-body card-border">
     <h2 class="text-2xl font-bold py-1">Credits</h2>
-    <p2 class="py-2" style="white-space: pre-line"><b>Haydar</b> - VPS / Server Hosting / Beta Tester</h2>
-    <p2 class="py-2"><b>Byeoon</b> - Lead Developer / Founder / CEO</p2>
-    <p2 class="py-2"><b>Cherrii</b> - Graphic Designer / Beta Tester</p2>
+    <p2 class="py-2" style="white-space: pre-line"><b>Haydar</b> - VPS & Server Hosting</h2>
+    <p2 class="py-2"><b>Byeoon</b> - Lead Developer & Founder</p2>
+    <p2 class="py-2"><b>Cherrii</b> - Graphic Designer</p2>
     <p2 class="py-2"><b>Seele</b> - I Love Her So She Gets A Spot Here</p2>
     <div class="divider"></div>
     <p2>Thank you to everyone who has helped make this service great! </p2>
@@ -78,12 +78,6 @@
   </nav>
   <nav>
     <div class="grid grid-flow-col gap-4">
-      <a>
-
-      </a>
-      <a>
-
-      </a>
       <a>
 
       </a>
