--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,17 +16,6 @@
 
 <div class="navbar bg-base-100 shadow-sm">
   <div class="navbar-start">
-    <div class="dropdown">
-      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-        </svg>
-      </div>
-      <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-        <li><a onclick="location.href='/download.html';">Download</a></li>
-        <li><a onclick="location.href='/credits.html';">Credits</a></li>
-      </ul>
-    </div>
     <img class="" src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;">
     <a class="btn btn-ghost text-xl">MyShare</a>
   </div>
@@ -51,6 +40,7 @@
           d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
       </svg>
     </label>
+    <label for="my-drawer-2" class="lg:hidden btn btn-primary drawer-button">Open Sidebar</label>
   </div>
 </div>
 </div>
