--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -27,6 +27,16 @@
   </div>
 
   <div class="navbar-end">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="avatar m-1 w-12">
+        <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+      </div>
+      <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+        <li><a>Item 1</a></li>
+        <li><a>Item 2</a></li>
+      </ul>
+    </div>
+    
     <label class="swap swap-rotate">
       <input type="checkbox" class="theme-controller" value="light" />
       <svg class="swap-off h-10 w-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
