update skeleton and refresh tailwind elements

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -66,7 +66,7 @@
     <div class="modal" role="dialog">
       <div class="modal-box space-y-3 shadow-2xl border border-primary">
         <h2 class="text-lg font-bold">Create a Note</h2>
-        <p>For now, MyShare only supports text notes. In a later update we will bring image support too.</p>
+<!--        <p>For now, MyShare only supports text notes. In a later update we will bring image support too.</p> -->
         <input type="text" id="shareInput_title" placeholder="Title" class="input w-full max-w-xs" />
         <textarea class="textarea w-full max-w-xs" id="shareInput_content" placeholder="Content"></textarea>
         <input type="text" id="shareInput_file" placeholder="Optional Image URL" class="input w-full max-w-xs" />
