--- a/public/skeleton.html
+++ b/public/skeleton.html
@@ -45,17 +45,24 @@
     </div>
     
     <div class="navbar-end">
-      <div class="flex gap-4">
-      <div class="dropdown dropdown-bottom dropdown-center">
-      <div tabindex="0" role="button" class="avatar m-1 w-12">
-        <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+      <div class="dropdown dropdown-end">
+        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+          <div class="w-10 rounded-full">
+            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+          </div>
+        </div>
+        <ul
+          tabindex="0"
+          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+          <li> <a href="https://myshare.haydar.dev/login.html" id="dd-login" class="justify-between">Login</a> </li>
+          <li> <a id="dd-profile" class="justify-between">Profile</a> </li>
+          <li><a href="https://myshare.haydar.dev/dashboard.html" id="dd-dashboard">Dashboard</a></li>
+          <li><a onClick="logout()" id="dd-logout">Logout</a></li>
+          <div class="divider m-0"></div>
+          <input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-ghost justify-start" aria-label="Dark" value="default" />
+          <input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-ghost justify-start" aria-label="Light" value="light" />
+        </ul>
       </div>
-      <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-40 p-2 shadow-sm">
-        <li><a>Dashboard</a></li>
-        <li><a>Logout</a></li>
-      </ul>
-    </div>
-  </div>
     </div>
   </div>
 
@@ -78,3 +85,35 @@
     </aside>
   </footer>
 </html>
+
+<script>
+
+async function isLoggedIn() {
+    try {
+      const response = await fetch('https://myshare.haydar.dev/api/email', {
+        method: 'GET',
+        headers: {
+          'Content-Type': 'application/json',
+          'authorization': localStorage.getItem("token")
+        }
+      });
+      if (!response.ok) {
+        throw new Error('You are not logged in!');
+        document.getElementById("dd-login").style.visibility = "block";
+        document.getElementById("dd-logout").style.visibility = "hidden";
+        document.getElementById("dd-dashboard").style.visibility = "hidden";
+      }
+    //  window.location.href = "https://myshare.haydar.dev/dashboard.html"
+    document.getElementById("dd-login").style.visibility = "hidden";
+    } catch (error) {
+
+    }
+  }
+  isLoggedIn();
+
+  function logout() {
+  localStorage.removeItem("token");
+  localStorage.removeItem("userId");
+  window.location.href = "https://myshare.haydar.dev";
+  }
+</script>
